// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for button component Button renders correctly with attribute disabled 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  >
    
  </p>
</button>
`;

exports[`Tests for button component Button renders correctly with attribute isLoader 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Tests for button component Button renders correctly with attribute text 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  >
    Тест
  </p>
</button>
`;

exports[`Tests for button component Button renders correctly without attribute text 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;
